polisy-ast: rework record attributes